# Mypcl

./: .clang-format  .gitignore  CMakeLists.txt  README.md  TODO.md
debug_thrust_sort/: CMakeLists.txt  main.cpp
docs/filter/: benchmark.md
examples/: gen_voxel_benchmark.py  gen_voxel_benchmark2.py
gen_voxel/: CMakeLists.txt
gen_voxel/example/: CMakeLists.txt
gen_voxel/example/common/: binfile_tools.cpp  binfile_tools.h  tic_toc.h
gen_voxel/example/test_voxel/: CMakeLists.txt  main.cpp
gen_voxel/include/csrc/sparse/all/: CustomThrustLib.h  PyBindSpconvOps.h  PyBindThrustCustomAllocatorV2.h  SpconvOps.h  ThrustCustomAllocatorV2.h
gen_voxel/include/csrc/sparse/all/cudakers/: CudaCommonKernel.h
gen_voxel/include/csrc/sparse/all/ops3d/: Point2Voxel.h  Point2VoxelV2.h  PyBindPoint2Voxel.h  SparseConvIndicesKernel.h
gen_voxel/include/csrc/sparse/all/ops3d/cudakers/: CudaCommonKernel.h
gen_voxel/include/csrc/sparse/all/ops3d/kernel/: Point2VoxelKernel.h
gen_voxel/include/csrc/sparse/all/ops3d/layout_ns/: TensorGeneric.h
gen_voxel/include/csrc/sparse/all/ops3d/p2v_c/: Point2VoxelCommon.h
gen_voxel/include/csrc/sparse/all/ops3d/spinds/: ConvOutLocIter.h
gen_voxel/include/csrc/sparse/all/ops3d/spinds/lociter/: TensorGeneric.h
gen_voxel/include/csrc/sparse/all/ops3d/spinds/lociter_rs/: TensorGeneric.h
gen_voxel/include/csrc/sparse/all/ops_cpu3d/spinds/: ConvOutLocIter.h  ConvProblem.h
gen_voxel/include/csrc/sparse/all/ops_cpu3d/spinds/lociter/: TensorGeneric.h
gen_voxel/include/csrc/sparse/all/ops_cpu3d/spinds/lociter_rs/: TensorGeneric.h
gen_voxel/include/cumm/common/: CUDALibs.h  CompileInfo.h  GemmBasic.h  GemmBasicKernel.h  PyBindCompileInfo.h  TensorView.h  TensorViewCPU.h  TensorViewHashKernel.h  TensorViewKernel.h  TensorViewMath.h  ThrustLib.h  TslRobinMap.h
gen_voxel/include/cumm/conv/bases/: ConvEnum.h
gen_voxel/include/cumm/conv/kernel/: ConvUtils.h
gen_voxel/include/cumm/conv/params/: ConvProblemCommon.h
gen_voxel/src/csrc/sparse/all/ops3d/Point2Voxel/: Point2Voxel_Point2Voxel.cc  Point2Voxel_get_grid_size.cc  Point2Voxel_point_to_voxel_hash.cu  Point2Voxel_point_to_voxel_hash_static.cu
gen_voxel/src/csrc/sparse/all/ops3d/Point2VoxelV2/: Point2VoxelV2_Point2Voxel.cc  Point2VoxelV2_get_grid_size.cc  Point2VoxelV2_point_to_voxel_hash.cu  Point2VoxelV2_point_to_voxel_hash_static.cu
gen_voxel/src/csrc/sparse/all/ops3d/PyBindPoint2Voxel/: PyBindPoint2Voxel_bind_Point2Voxel.cc
gen_voxel/src/csrc/sparse/all/ops3d/SparseConvIndicesKernel/: SparseConvIndicesKernel_calc_conv_indices_stage1.cu  SparseConvIndicesKernel_calc_conv_indices_stage1_mask.cu  SparseConvIndicesKernel_calc_conv_indices_stage2_mask_output.cu  SparseConvIndicesKernel_clean_indices_uniq.cu  SparseConvIndicesKernel_generate_conv_inds_mask_stage1.cu  SparseConvIndicesKernel_generate_conv_inds_stage1.cu  SparseConvIndicesKernel_generate_conv_inds_stage1_5.cu  SparseConvIndicesKernel_generate_conv_inds_stage2.cu  SparseConvIndicesKernel_generate_conv_inds_stage2_mask.cu  SparseConvIndicesKernel_generate_subm_conv_inds.cu
gen_voxel/src/csrc/sparse/all/ops3d/kernel/Point2VoxelKernel/: Point2VoxelKernel_indicesout_gather.cu  Point2VoxelKernel_limit_num_per_voxel_value.cu  Point2VoxelKernel_voxel_empty_fill_mean.cu  Point2VoxelKernel_voxelout_gather_mean.cu
gen_voxel/src/csrc/sparse/all/ops3d/p2v_c/Point2VoxelCommon/: Point2VoxelCommon_calc_meta_data.cc
mypcl/filters/: voxelDSample.py
src/: CMakeLists.txt
src/app/: CMakeLists.txt  testVoxelDSample.cpp
src/base/: points.h
src/filter/: CMakeLists.txt  voxelDSampler.cpp  voxelDSampler.h
src/filters/: voxelDSampler.cpp  voxelDSampler.h
src/utils/: colorfullogging.h  pcdconvertion.h  readbin.h  tic_toc.h
